# servicesim_for_wp2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: constraints.yaml  global_planner.yaml  localization-copied_from_husky_control.yaml  localization.yaml
launch/: amcl_demo.launch  competition.launch  demo_world.launch  move_base-copied_from_husky_navigation.launch  move_base.launch  move_group-copied_from_ur5_e_moveit_config.launch  move_group.launch  repose_map.launch  send_goal.sh  spawn_husky-copied_from_husky_gazebo.launch  spawn_husky.launch  test.launch  ur5e_moveit_config_demo.launch  ur5e_moveit_config_planning_context.launch
meshes/end_effector/visual/: circle_tray.STL
plugins/: camera.xacro  diff_drive.xacro  hokuyo.xacro  kinect.xacro  velodyne.xacro  velodyne16.xacro  velodyne32.xacro
scripts/: move_group_python_interface_tutorial.py  mv_grp_base.py  mv_grp_goal_seq_run.py  mv_grp_traj_splitter.py  test.py  test_wtf.py
src/: TrajectoryActorPlugin.cc  TrajectoryActorPlugin.hh  velodyne_plugin.cc
test/: frames_husky_manip_ur5e.gv  rosgraph_husky_manip_ur5e.dot  test2.rviz  test3.rviz  test_all.world  test_all_gpu.world  test_empty.pgm  test_empty.world  test_empty.yaml  test_empty_180.pgm  test_empty_180.yaml  test_empty_180_template.yaml  test_empty_180_wtf.yaml  test_empty_gpu.world  test_empty_green.world  test_single_blue.world  test_single_blue_gpu.world  test_single_green.world  test_single_green_gpu.world  test_single_red.world  test_single_red_gpu.world  wtf_mvp1e.rviz
urdf/: _d435-copied_from_realsense2_description.urdf.xacro  _d435.urdf.xacro  cam_mount_map.yaml  cfg_cam_mount_map.xacro  custom.urdf.xacro  custom_part_connector.urdf.xacro  custom_part_control_box.urdf.xacro  custom_part_ee_attachment.urdf.xacro  custom_part_ee_gripper.urdf.xacro  custom_part_sensor_kinect.urdf.xacro  custom_part_world_frame.urdf.xacro  empty.urdf  gazebo_desc_depth.urdf.xacro  gazebo_desc_depth_kinect.urdf.xacro  gazebo_desc_depth_realsense.urdf.xacro  gazebo_desc_depth_zed.urdf.xacro  gazebo_plugin_sensor_camera.urdf.xacro  gazebo_plugin_sensor_kinect.urdf.xacro  gazebo_plugin_sensor_realsense.urdf.xacro  husky-copied_from_humble_husky_description.urdf.xacro  husky-copied_from_humble_husky_description_mod.urdf.xacro  husky-copied_from_humble_husky_description_org.urdf.xacro  husky.urdf.xacro  husky_macro-copied_from_humble_husky_description.urdf.xacro  husky_macro.urdf.xacro  husky_ur5_e_description.urdf.xacro  husky_ur5_e_for_mob_manip.urdf.xacro  husky_ur5_e_for_wp2.urdf.xacro  lib.urdf.xacro  lib_util.urdf.xacro  lib_util_depth_cam_spawn.urdf.xacro  origin.urdf.xacro  ranger_mini-copied_from_ugv_gazebo_sim-0.0.1_ranger_mini_gazebo.xacro  ranger_mini.xacro  ranger_only_description.urdf.xacro  ranger_only_for_wp2.urdf.xacro  ranger_xarm6_description.urdf.xacro  ranger_xarm6_for_wp2.urdf.xacro  test.urdf.xacro  test.yaml  (+6 more)
urdf/husky_mod/: decorations.urdf.xacro  wheel.urdf.xacro
urdf/husky_mod/accessories/: intel_realsense.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
urdf/ranger_xarm6/: custom.urdf.xacro  custom_part_control_box.urdf.xacro  custom_part_sensor_depth.urdf.xacro  custom_part_sensor_depth_single.urdf.xacro
worlds/: example_loop.xacro  example_loop_org.xacro  kinect_macro.urdf.xacro  lib_actor.world.xacro  lib_custom.world.xacro  lib_floor.world.xacro  lib_object.world.xacro  lib_wall.world.xacro  service.world.xacro  test_custom.xacro
worlds/parts/servicesim/: BackEntrance.sdf  FrontEntrance.sdf  PrivateBathroomA.sdf  PrivateBathroomB.sdf  PrivateCafe.sdf  PrivateCubicle_31.sdf  PrivateCubicle_32.sdf  PrivateCubicle_33.sdf  PrivateCubicle_34.sdf  PrivateCubicle_35.sdf  PrivateCubicle_36.sdf  PrivateMeetingRoomA.sdf  PrivateMeetingRoomB.sdf  PrivateMeetingRoomC.sdf  PrivateMeetingRoomD.sdf  PrivateMeetingRoomE.sdf  PrivateOfficeA.sdf  PrivateOfficeB.sdf  PrivateOfficeC.sdf  PrivateOfficeD.sdf  PublicBathroomA.sdf  PublicBathroomB.sdf  PublicCafe.sdf  PublicCubicle_25.sdf  PublicCubicle_26.sdf  PublicCubicle_27.sdf  PublicCubicle_28.sdf  PublicCubicle_29.sdf  PublicCubicle_30.sdf  PublicMeetingRoomA.sdf  PublicMeetingRoomB.sdf  PublicMeetingRoomC.sdf  PublicMeetingRoomD.sdf  PublicMeetingRoomE.sdf
